Fri Jun 11 10:17:41 1993  Jim Kingdon  (kingdon@cygnus.com)

	* Makefile.in (install): Don't depend on gdb.

	* Rename remote-es1800.c to remote-es.c
	and remote-st2000.c to remote-st.c for 14-char filenames.
	config/m68k/{es1800,st2000}: Use the new names.

	* mips-tdep.c (isa_NAN): Don't return true on -0.

Fri Jun 11 10:24:35 1993  Fred Fish  (fnf@cygnus.com)

	* defs.h (INT_MAX):  Cast unsigned shift result to int.

Thu Jun 10 13:26:41 1993  Fred Fish  (fnf@cygnus.com)

	* elfread.c (elf_symtab_read):  Add bfd section address to bfd
	symbols, now that they are section relative.
	* solib.c (bfd_lookup_symbol):  Ditto.

Thu Jun 10 10:56:56 1993  Jim Kingdon  (kingdon@cygnus.com)

	* Makefile.in (depend): Add bfd -I's for paread.c and xcoffexec.c
	depend: Updated accordingly.

Wed Jun  9 16:08:44 1993  Jim Kingdon  (kingdon@cygnus.com)

	* Makefile.in (*.tab.c): Use mv for atomic update.

	* Makefile.in ({dist,real}clean): Also remove nm.h.
	(realclean): Also remove ${TESTS}, y.output, yacc.{acts,tmp}.
	(distclean): Don't rebuild *.tab.c or TAGS.

Wed Jun  9 12:56:58 1993  K. Richard Pixley  (rich@cygnus.com)

	* Makefile.in (version.c): add host and target names to version.c.
	* main.c (main): print three periods for the elipse.
	  (print_gdb_version): also print configuration.

	* udi/udiids.h, udi/udip2soc.c, udi/udiphcfg.h, udi/udiphunix.h,
	  udi/udiproc.h, udi/udipt29k.h, udi/udiptcfg.h, udi/udisoc.h,
	  udi/udr.c: Change AMD copyrights to FSF copyleft '93.

	* remote-eb.c (get_hex_regs, eb_fetch_registers), remote-adapt.c
	  (get_hex_regs, adapt_fetch_registers): cast args to
	  supply_register to avoid gcc warning.

	* config/a29k/a29k.mt (TDEPFILES): drop minimon support.  It
	  doesn't compile on solaris and is now obsolete.

	* config/sparc/sun4os4.mh (XM_CLIBS): remove -lresolv.  This
	  breaks stock sunos installations.

Wed Jun  9 06:14:33 1993  Jim Kingdon  (kingdon@cygnus.com)

	* m68k-stub.c: Add comment about frame cache.
